--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
